# EfficientAI-MLX-Toolkit

./: .gitignore  CLAUDE.md  CLI_README.md  DEVELOPMENT_COMPLIANCE.md  Issues_and_Recomendations.md  README.md  pyproject.toml  test_imports.py
.github/workflows/: claude-code-review.yml  claude.yml
.kiro/hooks/: benchmark-on-model-update.md  test-on-save.md  update-documentation.md
.kiro/steering/: apple-silicon-optimization.md  development-standards.md  uv-package-management.md
.knowledge-base/: CLI_README.md  README.md
.knowledge-base/.meta/: analytics.py  context_aware.py  contribution-guide.md  contributor.py  freshness.db  (+12 more)
benchmarks/: __init__.py
docs/: CLI_REFERENCE.md  CONFIGURATION.md  EfficientAI-MLX-Toolkit.md  PROJECT_ARCHITECTURE.md  PROJECT_STATUS_UPDATE.md  QUICKSTART.md  README.md  TESTING.md  TROUBLESHOOTING.md  blueprint.md  installation-guide.md  project-overview.md
dspy_toolkit/: __init__.py  cli.py  exceptions.py  framework.py  interfaces.py  manager.py  optimizer.py  registry.py  types.py
efficientai_mlx_toolkit/: __init__.py  cli.py
environment/: __init__.py  setup_manager.py
evolutionary_search/: README.md  __init__.py
knowledge_base/: __init__.py  cli.py
mlops/: MLOP-014_IMPLEMENTATION_SUMMARY.md  MLOP-015_IMPLEMENTATION_SUMMARY.md  __init__.py
projects/: __init__.py
projects/01_LoRA_Finetuning_MLX/: DEVELOPMENT_PLAN.md  Makefile  README.md  demo.py  pyproject.toml  run_tests.py
projects/01_LoRA_Finetuning_MLX/configs/: default.yaml
projects/01_LoRA_Finetuning_MLX/data/samples/: sample_conversations.jsonl
projects/01_LoRA_Finetuning_MLX/src/: __init__.py  cli.py
projects/01_LoRA_Finetuning_MLX/src/inference/: __init__.py  engine.py  serving.py
projects/01_LoRA_Finetuning_MLX/src/lora/: __init__.py  adapters.py  config.py  layers.py
projects/01_LoRA_Finetuning_MLX/src/optimization/: __init__.py  objectives.py  search.py  tuner.py
projects/01_LoRA_Finetuning_MLX/src/training/: __init__.py  callbacks.py  data_loader.py  optimizer.py  trainer.py
projects/01_LoRA_Finetuning_MLX/tests/: conftest.py  test_cli.py  test_inference.py  test_lora.py  test_training.py
projects/02_Model_Compression_MLX/: README.md  pyproject.toml
projects/02_Model_Compression_MLX/configs/: default.yaml
projects/02_Model_Compression_MLX/src/: __init__.py  cli.py
projects/02_Model_Compression_MLX/src/benchmarking/: __init__.py  benchmark.py  metrics.py
projects/02_Model_Compression_MLX/src/compression/: __init__.py  compressor.py  config.py  strategies.py
projects/02_Model_Compression_MLX/src/distillation/: __init__.py  distiller.py
projects/02_Model_Compression_MLX/src/evaluation/: __init__.py  evaluator.py
projects/02_Model_Compression_MLX/src/pruning/: __init__.py  config.py  pruner.py  scheduler.py  strategies.py  utils.py
projects/02_Model_Compression_MLX/src/quantization/: __init__.py  calibration.py  config.py  methods.py  quantizer.py  utils.py
projects/02_Model_Compression_MLX/tests/: conftest.py  test_cli.py  test_quantization.py
projects/03_CoreML_Stable_Diffusion_Style_Transfer/: README.md  TESTING.md  pyproject.toml
projects/03_CoreML_Stable_Diffusion_Style_Transfer/configs/: default.yaml
projects/03_CoreML_Stable_Diffusion_Style_Transfer/docs/: USAGE.md
projects/03_CoreML_Stable_Diffusion_Style_Transfer/src/: __init__.py  cli.py
projects/03_CoreML_Stable_Diffusion_Style_Transfer/src/coreml/: __init__.py  config.py  converter.py  optimizer.py
projects/03_CoreML_Stable_Diffusion_Style_Transfer/src/diffusion/: __init__.py  config.py  model.py  pipeline.py
projects/03_CoreML_Stable_Diffusion_Style_Transfer/src/inference/: __init__.py  config.py  engine.py
projects/03_CoreML_Stable_Diffusion_Style_Transfer/src/style_transfer/: __init__.py  config.py  engine.py  pipeline.py
projects/03_CoreML_Stable_Diffusion_Style_Transfer/src/training/: __init__.py  callbacks.py  config.py  trainer.py
projects/03_CoreML_Stable_Diffusion_Style_Transfer/src/utils/: __init__.py
projects/03_CoreML_Stable_Diffusion_Style_Transfer/tests/: __init__.py  test_cli.py  test_config.py  test_coreml_converter.py  test_coreml_optimizer.py  test_diffusion_model.py  test_diffusion_pipeline.py  test_style_transfer.py  test_style_transfer_engine.py
projects/05_Meta_Learning_PEFT/: README.md  pyproject.toml
projects/05_Meta_Learning_PEFT/benchmarks/: README.md  __init__.py  meta_learning_benchmark.py  peft_comparison_benchmark.py  validation_suite.py
projects/05_Meta_Learning_PEFT/configs/: default.yaml
projects/05_Meta_Learning_PEFT/docs/: API.md  ARCHITECTURE.md  INTEGRATION.md  TROUBLESHOOTING.md  USAGE_GUIDE.md
projects/05_Meta_Learning_PEFT/research/: literature_review.md  task_distribution_design.md
projects/05_Meta_Learning_PEFT/src/: __init__.py  cli.py
projects/05_Meta_Learning_PEFT/src/adapter_generation/: __init__.py  adalora.py  adapter_factory.py  peft_integration.py  prefix_prompt_tuning.py  task_conditional.py
projects/05_Meta_Learning_PEFT/src/meta_learning/: __init__.py  evaluation.py  maml.py  meta_sgd.py  models.py  orchestrator.py  reptile.py
projects/05_Meta_Learning_PEFT/src/task_embedding/: __init__.py  learned_embeddings.py  task_distribution.py
projects/05_Meta_Learning_PEFT/src/utils/: __init__.py  baseline.py  config.py  logging.py
projects/05_Meta_Learning_PEFT/tests/: __init__.py  test_adalora.py  test_baseline.py  test_integration.py  test_maml.py  test_meta_sgd.py  test_peft_integration.py  test_prefix_prompt_tuning.py  test_reptile.py  test_task_conditional.py  test_task_distribution.py  test_task_embeddings.py
scripts/: generate-specs-from-features.sh  migrate-kiro-to-sage.sh
templates/: entry-template.md  pattern-template.md  troubleshooting-template.md
tests/: __init__.py  conftest.py  test_deployment.py  test_framework.py  test_integration.py  test_management.py  test_mlx_provider.py  test_performance.py  test_recovery.py  test_signatures.py  test_utils.py
utils/: __init__.py  benchmark_runner.py  config_manager.py  file_operations.py  logging_utils.py  plotting_utils.py
(+632 files in other folders)
