[project]
name = "efficientai-mlx-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
    "typer>=0.16.0",
    "rich>=14.1.0",
    "pytest>=8.4.1",
]

[project.scripts]
kb = "knowledge_base.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["knowledge_base"]
