# Project configuration for Model Compression Framework
[project]
name = "model-compression-mlx"
version = "0.1.0"
description = "MLX-Native Model Compression Framework for Apple Silicon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.15.0",
    "mlx-lm>=0.15.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.5.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "psutil>=5.9.0",
    "pytest>=8.4.1",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "torch>=2.1.0",  # For certain compression algorithms and fallbacks
    "torchvision>=0.16.0",  # For vision model compression
    "scikit-learn>=1.3.0",  # For evaluation metrics
    "matplotlib>=3.7.0",  # For compression analysis plots
    "seaborn>=0.12.0",  # For advanced visualizations
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=6.2.1",
    "pytest-benchmark>=5.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
    "ruff>=0.1.0",
]
visualization = [
    "plotly>=5.15.0",
    "tensorboard>=2.14.0",
    "wandb>=0.16.0",
]
apple-silicon = [
    "coremltools>=7.0.0",
]
advanced = [
    "optuna>=3.4.0",  # For compression strategy optimization
    "onnx>=1.15.0",   # For ONNX model support
    "onnxruntime>=1.16.0",  # For ONNX inference
]

# Project CLI is integrated into the main efficientai-toolkit CLI
# Use: uv run efficientai-toolkit model-compression-mlx:<command>

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "benchmark: marks tests as benchmarks",
    "apple_silicon: marks tests that require Apple Silicon hardware",
    "asyncio: marks tests as asynchronous",
    "quantization: marks tests related to quantization",
    "pruning: marks tests related to pruning",
    "distillation: marks tests related to distillation",
]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true